--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Bem vindo a ainha pagina do colabeduc</h1>
+<h1>Bem vindo a mainha pagina do colabeduc</h1>
 <p>Aqui você pode ver todos os meus projetos.</p>
 
 </body>
